--- a/app/src/main/res/layout/activity_materi3.xml
+++ b/app/src/main/res/layout/activity_materi3.xml
@@ -1,5 +1,5 @@
 <?xml version= "1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,14 +12,21 @@
         android:ems="10"
         android:gravity="center"
         android:hint="Input Name"
-
         android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
         android:text="Send Data" />
-</LinearLayout>
+
+    <Button
+        android:id="@+id/back3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:text="Back" />
+</RelativeLayout>
