--- a/app/src/main/res/layout/activity_materi4.xml
+++ b/app/src/main/res/layout/activity_materi4.xml
@@ -1,28 +1,27 @@
-<?xml version= "1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/text_view_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
+        android:layout_marginTop="32dp"
         android:gravity="center"
-        android:hint="Input Name"
-        android:inputType="textPersonName" />
+        android:text="Name" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="Send Data" />
+        android:layout_below="@id/text_view_result"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:text="Edit Name" />
 
     <Button
-        android:id="@+id/back3"
+        android:id="@+id/back4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
